    (Closes: #1003546).  Tmux users should upgrade to version 3.0 or
    higher, or set TERM to something else than screen-256color.
  * Make ncurses-base the primary package into which the Debian FAQ
    and TODO files are installed.
  * Add libmd-dev to Build-Depends on kfreebsd-any to work around FTBFS
    if /usr/lib/$(DEB_HOST_MULTIARCH)/pkgconfig does not exist.

 -- Sven Joachim <svenjoac@gmx.de>  Sun, 16 Jan 2022 13:19:19 +0100

ncurses (6.3-1) unstable; urgency=medium

  * New upstream release.
  * Update symbols files and bump shlibs.
    - Update the minimal version for symbols added after the 6.2 release
      to 6.3.
  * Drop the lintian override for ncurses-examples introduced in version
    6.1+20181013-2, it no longer triggers.
  * Do not force removal of obsolete packages which terminfo files have
    been taken over by ncurses-term (Closes: #994433).

 -- Sven Joachim <svenjoac@gmx.de>  Mon, 15 Nov 2021 17:54:06 +0100

ncurses (6.2+20210905-1) unstable; urgency=low

  * New upstream patchlevel.
    - Extend --disable-pkg-ldflags option to also control whether
      $LDFLAGS from the build is provided in -config and .pc files.
      Use that option in debian/rules (Closes: #986764).
    - Drop symbols GCC_PRINTF and GCC_SCANF from curses.h.in, to
      simplify use (Closes: #993179).
  * Drop patch 02-fix-mlterm.diff, applied upstream.
  * Refresh remaining Debian patches.
  * Update symbols files for new symbols erasewchar_sp, killwchar_sp
    and _nc_reset_tparm.
  * Bump autoconf-dickey build dependency to (>= 2.52+20210509), as per
    test/configure.in.
  * Ship stterm and stterm-256color terminfo entries in ncurses-term.
  * Take over terminfo entries from the deceased Debian packages
    jfbterm, kon2, libiterm1 and tn5250 in ncurses-term.
  * Update list of terminfo entries shipped by other Debian packages.
  * Update years in debian/copyright.

 -- Sven Joachim <svenjoac@gmx.de>  Thu, 09 Sep 2021 19:56:22 +0200
