@@ -1,1 +1,1 @@
-test/README  usr/lib/ncurses/examples
+test/README  usr/libexec/ncurses-examples
