@@ -1,1 +1,1 @@
-usr/lib/ncurses/examples   usr/share/doc/ncurses-examples/examples
+usr/libexec/ncurses-examples   usr/share/doc/ncurses-examples/examples
