@@ -8,6 +8,7 @@ ncurses (6.3-2) UNRELEASED; urgency=medium
     and TODO files are installed.
   * Add libmd-dev to Build-Depends on kfreebsd-any to work around FTBFS
     if /usr/lib/$(DEB_HOST_MULTIARCH)/pkgconfig does not exist.
+  * Install the example programs into /usr/libexec/ncurses-examples.
 
  -- Sven Joachim <svenjoac@gmx.de>  Sun, 16 Jan 2022 13:19:19 +0100
 
